learning_basilisk/couette_example/multiFluid/Couette_2Fluid_Gravity/slurm-1231930.out
qcc -autolink -O2 -Wall -fopenmp  -g -Wall -pipe -D_FORTIFY_SOURCE=2 -DDUMBGL -o multicouette_98_pert/multicouette_98_pert multicouette_98_pert.c  -lm
In file included from /usr/include/stdint.h:25:0,
                 from /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stdint.h:9,
                 from multicouette_98_pert-cpp.c:6:
/usr/include/features.h:330:4: warning: #warning _FORTIFY_SOURCE requires compiling with optimization (-O) [-Wcpp]
 #  warning _FORTIFY_SOURCE requires compiling with optimization (-O)
    ^
multicouette_98_pert.c: In function ‘init_0’:
multicouette_98_pert.c:90:24: error: expected ‘;’ before numeric constant
   fraction (f, 0.3-y.025*sin((pi/4)*x));
                        ^
make: *** [multicouette_98_pert.s] Error 1
make: *** [multicouette_98_pert.s] Error 1
